Shrinkwrap modifier confusion on linked meshes #43122

Closed
opened 2015-01-04 16:40:27 +01:00 by Karja Krähwald · 8 comments

System Information
Windows 7 64, GTX 980

Blender Version
Broken: 9e963ae + 8a28895

Short description of error
A specific modifier setup on two linked meshes changes the Shrinkwrap-modifier-target of a third/not-linked mesh, if you go into Editmode of one linked mesh.

Exact steps for others to reproduce the error
LinkedMeshShrinkwrapBug.blend

Steps:

  • Add two linked Cubes (Alt-D), put them on the same position.
    • Subsurf-Cube
    • Skin-Cube
  • Add another, not linked Cube, put it above the two Cubes.
    • Shrinkwrap-Cube

Modifier Setup:
Subsurf-Cube.png

Skin-Cube.png Assign one half of the mesh to Group.

Shrinkwrap-Cube.png

  • Select Skin-Cube.
    • Change back and forth between Object and Editmode.

(IMPORTANT) Problem: Shrinkwrap-Cube jumps from its target to the other linked wrong mesh.
Move vertices to see it more easily.


(NOTE) Note: Subsurf levels seem to have an influence - only higher levels enforce this bug.
To check, change simplify while in Skin-Cubes Editmode.

(NOTE) Note: I think Edge Split isnt really needed, it only increases the occurrence. (As it could also be so for the other modifiers)
But i found out for a simple example its necessary.

**System Information** Windows 7 64, GTX 980 **Blender Version** Broken: 9e963ae + 8a28895 **Short description of error** A specific modifier setup on two linked meshes changes the Shrinkwrap-modifier-target of a third/not-linked mesh, if you go into Editmode of one linked mesh. **Exact steps for others to reproduce the error** [LinkedMeshShrinkwrapBug.blend](https://archive.blender.org/developer/F135122/LinkedMeshShrinkwrapBug.blend) Steps: - Add two linked Cubes (Alt-D), put them on the same position. - Subsurf-Cube - Skin-Cube - Add another, not linked Cube, put it above the two Cubes. - Shrinkwrap-Cube Modifier Setup: ![Subsurf-Cube.png](https://archive.blender.org/developer/F135115/Subsurf-Cube.png) ![Skin-Cube.png](https://archive.blender.org/developer/F135117/Skin-Cube.png) Assign one half of the mesh to Group. ![Shrinkwrap-Cube.png](https://archive.blender.org/developer/F135119/Shrinkwrap-Cube.png) - Select Skin-Cube. - Change back and forth between Object and Editmode. (IMPORTANT) Problem: Shrinkwrap-Cube jumps from its target to the other linked wrong mesh. Move vertices to see it more easily. --------------- (NOTE) Note: Subsurf levels seem to have an influence - only higher levels enforce this bug. To check, change simplify while in Skin-Cubes Editmode. (NOTE) Note: I think Edge Split isnt really needed, it only increases the occurrence. (As it could also be so for the other modifiers) But i found out for a simple example its necessary.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Member

Added subscribers: @jaguarandi, @ideasman42, @JulianEisel

Added subscribers: @jaguarandi, @ideasman42, @JulianEisel
Member

I checked that in code, but it doesn't seem like it's using the wrong object it more looks like the object using skin modifier isn't aware of the subsurf modifier on the other linked object. Or said differently: The shrinkwrap modifier can't access the derived mesh of the other linked object in edit mode.

@ideasman42 can you confirm that? Mind having a look? (don't think @jaguarandi is available :/)

I checked that in code, but it doesn't seem like it's using the wrong object it more looks like the object using skin modifier isn't aware of the subsurf modifier on the other linked object. Or said differently: The shrinkwrap modifier can't access the derived mesh of the other linked object in edit mode. @ideasman42 can you confirm that? Mind having a look? (don't think @jaguarandi is available :/)
Campbell Barton was assigned by Julian Eisel 2015-01-05 17:41:13 +01:00

This issue was referenced by 2d2bfd416b

This issue was referenced by 2d2bfd416b55233da9b8c38234ea1062bf3f9368

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2d2bfd416b.

Closed by commit 2d2bfd416b.

This issue was referenced by 0b5a64fe7f

This issue was referenced by 0b5a64fe7f4b0e4286d7aafaa85501bf60d8576b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43122
No description provided.