Fix T43122: Shrinkwrap target, wrong linked object